--- a/Pagina/css/my-login.css
+++ b/Pagina/css/my-login.css
@@ -1,4 +1,5 @@
-html,body {
+html,
+body {
 	height: 100%;
 }
 
@@ -14,9 +15,14 @@ body.my-login-page {
 	border-radius: 15%;
 
 	margin: 40px auto;
-	box-shadow: 0 4px 8px rgba(0,0,0,.05);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, .05);
 	position: relative;
 	z-index: 1;
+}
+
+.error {
+	font-size: larger;
+	color: red;
 }
 
 .my-login-page .brand img {
@@ -30,7 +36,7 @@ body.my-login-page {
 
 .my-login-page .card {
 	border-color: transparent;
-	box-shadow: 0 4px 8px rgba(0,0,0,.05);
+	box-shadow: 0 4px 8px rgba(0, 0, 0, .05);
 }
 
 .my-login-page .card.fat {
