funcionalidad en el archivo user.php, cambios en funciones.php y en el archivo css

--- a/Pagina/css/my-login.css
+++ b/Pagina/css/my-login.css
@@ -124,3 +124,15 @@ body.my-login-page {
 	border-radius: 10px;
 	margin-bottom: 100px;
 }
+
+.cards-vuelos{
+	margin-bottom: 30px;
+	padding: 10px;
+}
+
+.strong{
+	color: rgba(117, 149, 252, 255);	
+}
+.vuelos-disponibles{
+	margin-bottom: 20px;
+}
