--- a/Pagina/css/my-login.css
+++ b/Pagina/css/my-login.css
@@ -152,6 +152,7 @@ body.my-login-page {
 
 .card-text {
 	font-size: 1.1rem;
+	font-style: bold;
 }
 
 .card-text span {
@@ -176,4 +177,41 @@ body.my-login-page {
 .vuelos-disponibles {
 	margin-bottom: 20px;
 
+}
+
+.div_vervuelos{
+	height: 50px;
+	width: 200px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 20px;
+}
+
+.container_vuelos1{
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 20px;
+}
+.container_vuelos2{
+	width: 100%;
+	height: 40px;
+	color: white;
+}
+
+.container_vuelos{
+	display: flex;
+	flex-direction: column;
+}
+
+.card_form{
+	width: 600px;
+}
+.card_form2{
+	width: 300px;
+}
+
+.div_funcionalidad{
+	display: flex;
+	border: 1px solid red;
 }
