--- a/Pagina/css/my-login.css
+++ b/Pagina/css/my-login.css
@@ -8,6 +8,10 @@ body.my-login-page {
 	font-size: 14px;
 }
 
+body {
+	background-color: #608cbe !important;
+}
+
 .my-login-page .brand {
 	width: 90px;
 	height: 90px;
@@ -216,4 +220,70 @@ body.my-login-page {
 .div_funcionalidad {
 	display: flex;
 	border: 1px solid red;
+}
+
+
+.custom-table th,
+.custom-table td {
+	border: none;
+	text-align: center;
+
+}
+
+.custom-table thead th {
+	border: none;
+	background-color: #5a9ba3;
+	color: white;
+}
+
+.custom-table tbody tr:nth-child(even) {
+	border: none;
+	background-color: #f2f2f2;
+}
+
+#reservar_vuelo {
+	background-color: #50749b !important;
+}
+
+.navbar {
+
+	background-color: #536b85 !important;
+	border-radius: 10px;
+}
+
+
+
+.logout-button {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	padding: 10px 20px;
+	background-color: #f44336;
+	color: white;
+	border: none;
+	border-radius: 5px;
+	cursor: pointer;
+}
+
+.error-message {
+	margin-top: 20px;
+	padding: 15px;
+	background-color: #f8d7da;
+	color: #721c24;
+	border: 1px solid #f5c6cb;
+	border-radius: 5px;
+}
+
+.form-container {
+	background-color: #8eb0d4;
+	border: 1px solid #ccc;
+	padding: 20px;
+	border-radius: 10px;
+	max-width: 500px;
+	margin: 0 auto;
+	margin-top: 50px;
+}
+
+#vuelooo {
+	background-color: rgb(48, 100, 177) !important;
 }
